# alpamon

./: .gitignore  .goreleaser.yaml  LICENSE  MANIFEST.in  README.md  go.mod  go.sum  setup.cfg
.github/workflows/: build-and-test.yml  lint.yml  release.yml
Dockerfiles/: build.sh
Dockerfiles/centos/7/: Dockerfile  entrypoint.sh
Dockerfiles/debian/10/: Dockerfile  entrypoint.sh
Dockerfiles/debian/11/: Dockerfile  entrypoint.sh
Dockerfiles/redhat/8/: Dockerfile  entrypoint.sh
Dockerfiles/redhat/9/: Dockerfile  entrypoint.sh
Dockerfiles/ubuntu/18.04/: Dockerfile  entrypoint.sh
Dockerfiles/ubuntu/20.04/: Dockerfile  entrypoint.sh
alpamon/: __init__.py  client.py  conf.py  deploy.py  main.py  queryman.py  service.py  session.py  utils.py
alpamon/config/: alpamon.conf  alpamon.service  tmpfile.conf
alpamon/io/: queue.py  reporter.py  session.py
alpamon/logger/: reporter.py  server.py  settings.py  utils.py
alpamon/packager/: python.py  system.py  utils.py
alpamon/runner/: command.py  commit.py  env.py  nms.py  pty.py  rproxy.py  shell.py
cmd/alpamon/: main.go
configs/: alpamon-restart.timer  alpamon.service  tmpfile.conf
pkg/collector/: collector.go
pkg/config/: config.go  types.go
pkg/db/: client.go  db.go  migrate.go
pkg/logger/: ftp_logger.go  logger.go  server.go
pkg/pidfile/: pidfile.go  pidfile_darwin.go  pidfile_linux.go
pkg/runner/: client.go  command.go  command_types.go  commit.go  commit_test.go  commit_types.go  env.go  ftp.go  ftp_darwin.go  ftp_linux.go  ftp_types.go  pty.go  pty_darwin.go  pty_linux.go  shell.go
pkg/scheduler/: queue.go  reporter.go  session.go  types.go
pkg/utils/: fs.go  http_client.go  metrics.go  utils.go
pkg/version/: version.go
scripts/: install_atlas.sh  postinstall.sh  postremove.sh  preremove.sh
tests/: build.sh
(+100 files in other folders)
