[metadata]
name = alpamon
version = attr: alpamon.VERSION
description = Alpamon
long_description = file:README.md
author = Alpaca Networks
author_email = developers@alpacanetworks.com
maintainer = Alpaca Networks
maintainer_email = developers@alpacanetworks.com
license = MIT License
url = https://github.com/alpacanetworks/alpamon
platforms = posix

[options]
python_requires = >=3.4
install_requires =
    distro==1.6.0; python_version <= '3.6'
    urllib3==1.25.7; python_version <= '3.6'
    requests==2.14.0; python_version <= '3.6'
    websocket-client==0.59.0; python_version <= '3.6'

    websocket-client
    pid
    requests
    distro

include_package_data = true
packages = find:

[options.entry_points]
console_scripts = 
    alpamon = alpamon.main:main
    alpamon-deploy = alpamon.deploy:main
